test for new bintray target

--- a/bintray-template.j2
+++ b/bintray-template.j2
@@ -12,7 +12,7 @@
         }
     ],
     "package": {
-        "subject": "emuflight",
+        "subject": "emuflight-dev",
         "repo": "dev_hex",
         "desc": "EmuFlight is flight controller software (firmware) used to fly multi-rotor craft.",
         "issue_tracker_url": "https://github.com/emuflight/EmuFlight/issues",
